--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,8 +13,10 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "express": "^4.18.2",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
